restructred and reorgenized SDocumentController and exported some classes to their own file.
git-svn-id: https://korpling.german.hu-berlin.de/svn/saltnpepper/pepper/trunk@2573 47085195-c50e-4317-8f43-7cb808db0f00